[package]
name = "chumma"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
datatypes = {path = "./datatypes"}
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]

[workspace]
members = [
    "datatypes",
]

